--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-201901714 장선우
-<a href="/about.html">about me</a>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<title>git Pages</title>
+	</head>
+	<body>
+		<h1>201901714 장선우</h1>
+		<br />
+		<a href="/about.html">about me</a>
+	</body>
+</html>
