--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<body>
 		<h1>201901714 장선우</h1>
 		<br />
-		<a href="/about.html">about me</a>
+		<h2><a href="/about.html">about me</a></h2>
 	</body>
 </html>
