--- a/about.html
+++ b/about.html
@@ -11,74 +11,72 @@
 
 <!--
   ***
-  TODO: fill in your header
-  INSERT YOUR NAME HERE
-  INSERT THE CURRENT DATE HERE
-  INSERT YOUR SECTION/TA NAME
+  Name: SunWoo Jang
+  Date: April 14, 2023
+  Section: IAB 6068
 
-  WRITE A 2-3 SENTENCE SHORT FILE DESCRIPTION HERE
+  This is about.html page for my portfolio of web development work.
+  This page can be accessed via the link included in index.html.
   ***
 -->
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
-    <title>*** TODO: Write a title for this page ***</title>
+    <title>About me</title>
   </head>
   <body>
     <section>
-      <h1>*** TODO: Describe this page succinctly! ***</h1>
+      <h1>Let me introduce myself! <a href="/aboutmore.html">More Information</a></h1>
       <p>
-        *** TODO: Insert a brief description of yourself in 1-2 sentences (e.g. background, something
-        you did during last vacation, what you're looking forward to in this course, etc.).
+        My name is SunWoo, Jang. And my student ID is 201901714.
+        I'm in the 3rd grade of ITE. 
       </p>
     </section>
 
     <section>
       <h2>Classes I'm currently taking</h2>
-      <!--
-        *** TODO: Finish the following ordered list with classes you are currently taking (in order
-        of most-to-least favorite). We've shown you two list items, but you may need to add more.
-      -->
       <ol>
-        <li>*** TODO: add your first favorite class***</li>
-        <li>*** TODO: add your second favorite class***</li>
+        <li>Internet Design Laboratory</li>
+        <li>Data Communication</li>
+        <li>Operating System</li>
+        <li>Information Security System</li>
+        <li>Linear Algebra</li>
+        <li>Communication Engineering</li>
       </ol>
     </section>
 
     <section>
       <h2>Five of My Favorite Things</h2>
-      <!--
-        ***
-        TODO: Finish the following unordered list of your favorite things (you can customize the
-        categories if you'd like!).
-
-        Wrap your ANSWER for at least one favorite thing inside of
-        an <a> tag, linking to a related page (e.g. a wikipedia page of your favorite animal). If you have multiple favorites in a category, try a nested list inside of an li!
-        ***
-      -->
       <ol>
-        <li><strong>Favorite animal:</strong> *** TODO: fill in your answer ***</li>
-        <li><strong>Favorite food:</strong> *** TODO: fill in your answer ***</li>
-        <li><strong>Favorite TV show:</strong> *** TODO: fill in your answer ***</li>
-        <li><strong>Favorite hobby:</strong> *** TODO: fill in your answer ***</li>
-        <li><strong>Favorite ???:</strong> *** TODO: fill in your answer ***</li>
+        <li>
+          <strong>Favorite animal:</strong> 
+          <a href="https://en.wikipedia.org/wiki/Ibex">Ibex</a>
+        </li>
+        <li>
+          <strong>Favorite food:</strong> 
+          <a href="https://ko.wikipedia.org/wiki/%EB%9D%BC%EB%A9%B4">라면</a>
+        </li>
+        <li>
+          <strong>Favorite TV show:</strong> 
+          <a href="https://ko.wikipedia.org/wiki/%EC%8B%A0%EC%84%9C%EC%9C%A0%EA%B8%B0">신서유기</a>
+        </li>
+        <li>
+          <strong>Favorite hobby:</strong> 
+          <a href="https://music.youtube.com/">Listening Music</a>
+        </li>
+        <li>
+          <strong>Favorite game:</strong> 
+          <a href="https://playvalorant.com/ko-kr/">Valorant</a>
+        </li>
       </ol>
 
-      <!--
-        ***
-        TODO: Find two images that represent when you're happy and when you're sad (consider
-        Google Image Search) but remember to cite your sources.
-        ***
-      -->
-
       <h3>A picture that represents when I'm happy</h3>
-      <img src="*** TODO: add image file***" alt="*** TODO: insert descriptive text for screenreaders***" />
-      <p>*** TODO: add citation of where you got this file ***</p>
+      <img src="https://user-images.githubusercontent.com/62889604/232098113-49aca752-dd8a-4f2c-9774-350cbe704f3c.png" alt="smileicon" />
+      <p>img src = https://www.flaticon.com/free-icons/smile</p>
 
       <h3>A picture that represents when I'm sad</h3>
-      <img src="*** TODO: add image file***" alt="*** TODO: insert descriptive text for screenreaders***" />
-      <p>*** TODO: add citation of where you got this file ***</p>
+      <img src="https://user-images.githubusercontent.com/62889604/232098835-972ba648-1b61-4fca-b960-7d9a66f82dea.png" alt="sadicon" />
+      <p>img src = https://www.flaticon.com/free-icons/sad</p>
 
       <h3>One of my favorite quotes</h3>
       <!--
@@ -90,9 +88,9 @@
       <article>
         <blockquote>
           <p>
-            *** TODO: Insert a favorite quote here. Add another paragraph tag if needed! ***
+            It ain't over till it's over.
           </p>
-          <footer>*** TODO: Insert the source (e.g. author) for the quote here.***</footer>
+          <footer>Lawrence Peter "Yogi" Berra</footer>
         </blockquote>
       </article>
     </section>
