--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+<!--
+  ***
+  Name: SunWoo Jang
+  Date: April 14, 2023
+  Section: IAB 6068
+
+  This is the index.html page for my portfolio of web development work.
+  It includes links to side projects I have done during IAB 6068,
+  including an about page, a blog template
+  ***
+-->
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -6,7 +17,6 @@
 	</head>
 	<body>
 		<h1>201901714 장선우</h1>
-		<br />
-		<h2><a href="/about.html">about me</a></h2>
+		<a href="/about.html">about me</a>
 	</body>
 </html>
