--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 -->
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>About me</title>
   </head>
   <body>
