--- a/aboutmore.html
+++ b/aboutmore.html
@@ -13,7 +13,7 @@
 <html lang="en">
 	<head>
 		<title>What I learned</title>
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="/styles.css" />
 	</head>
 	<body>
 		<h1>What I learned...</h1>
