--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 	</head>
 	<body>
 		<h1>201901714 장선우</h1>
-		<h2><a href="/about">about me</a></h2>
+		<h2><a href="/about.html">about me</a></h2>
 	</body>
 </html>
