--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>CSP</title>
+		<title>git Pages</title>
 	</head>
 	<body>
 		<h1>201901714 장선우</h1>
-		<h2><a href="/about.html">about me</a></h2>
+		<a href="/about.html">about me</a>
 	</body>
 </html>
