--- a/about.html
+++ b/about.html
@@ -26,7 +26,9 @@
   </head>
   <body>
     <section>
-      <h1>Let me introduce myself! <a href="/aboutmore.html">More Information</a></h1>
+      <h1>Let me introduce myself! 
+        <a href="/aboutmore.html">More Information</a>
+      </h1>
       <p>
         My name is SunWoo, Jang. And my student ID is 201901714.
         I'm in the 3rd grade of ITE. 
