--- a/about.html
+++ b/about.html
@@ -20,81 +20,90 @@
   ***
 -->
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/styles.css" />
-    <title>About me</title>
-  </head>
-  <body>
-    <section>
-      <h1>Let me introduce myself! 
-        <a href="/aboutmore.html">More Information</a>
-      </h1>
-      <p>
-        My name is SunWoo, Jang. And my student ID is 201901714.
-        I'm in the 3rd grade of ITE. 
-      </p>
-    </section>
+	<head>
+		<link rel="stylesheet" href="/styles.css" />
+		<script src="/index.js"></script>
+		<title>About me</title>
+	</head>
+	<body>
+		<section>
+			<h1>
+				Let me introduce myself!
+				<a href="/aboutmore.html">More Information</a>
+			</h1>
+			<p>
+				My name is SunWoo, Jang. And my student ID is 201901714. I'm in the 3rd
+				grade of ITE.
+			</p>
+		</section>
 
-    <section>
-      <h2>Classes I'm currently taking</h2>
-      <ol>
-        <li>Internet Design Laboratory</li>
-        <li>Data Communication</li>
-        <li>Operating System</li>
-        <li>Information Security System</li>
-        <li>Linear Algebra</li>
-        <li>Communication Engineering</li>
-      </ol>
-    </section>
+		<section>
+			<h2>Classes I'm currently taking</h2>
+			<ol>
+				<li>Internet Design Laboratory</li>
+				<li>Data Communication</li>
+				<li>Operating System</li>
+				<li>Information Security System</li>
+				<li>Linear Algebra</li>
+				<li>Communication Engineering</li>
+			</ol>
+		</section>
 
-    <section>
-      <h2>Five of My Favorite Things</h2>
-      <ol>
-        <li>
-          <strong>Favorite animal:</strong> 
-          <a href="https://en.wikipedia.org/wiki/Ibex">Ibex</a>
-        </li>
-        <li>
-          <strong>Favorite food:</strong> 
-          <a href="https://ko.wikipedia.org/wiki/%EB%9D%BC%EB%A9%B4">라면</a>
-        </li>
-        <li>
-          <strong>Favorite TV show:</strong> 
-          <a href="https://ko.wikipedia.org/wiki/%EC%8B%A0%EC%84%9C%EC%9C%A0%EA%B8%B0">신서유기</a>
-        </li>
-        <li>
-          <strong>Favorite hobby:</strong> 
-          <a href="https://music.youtube.com/">Listening Music</a>
-        </li>
-        <li>
-          <strong>Favorite game:</strong> 
-          <a href="https://playvalorant.com/ko-kr/">Valorant</a>
-        </li>
-      </ol>
+		<section>
+			<h2>Five of My Favorite Things</h2>
+			<ol>
+				<li>
+					<strong>Favorite animal:</strong>
+					<a href="https://en.wikipedia.org/wiki/Ibex">Ibex</a>
+				</li>
+				<li>
+					<strong>Favorite food:</strong>
+					<a href="https://ko.wikipedia.org/wiki/%EB%9D%BC%EB%A9%B4">라면</a>
+				</li>
+				<li>
+					<strong>Favorite TV show:</strong>
+					<a
+						href="https://ko.wikipedia.org/wiki/%EC%8B%A0%EC%84%9C%EC%9C%A0%EA%B8%B0"
+						>신서유기</a
+					>
+				</li>
+				<li>
+					<strong>Favorite hobby:</strong>
+					<a href="https://music.youtube.com/">Listening Music</a>
+				</li>
+				<li>
+					<strong>Favorite game:</strong>
+					<a href="https://playvalorant.com/ko-kr/">Valorant</a>
+				</li>
+			</ol>
 
-      <h3>A picture that represents when I'm happy</h3>
-      <img src="https://user-images.githubusercontent.com/62889604/232098113-49aca752-dd8a-4f2c-9774-350cbe704f3c.png" alt="smileicon" />
-      <p>img src = https://www.flaticon.com/free-icons/smile</p>
+			<h3>A picture that represents when I'm happy</h3>
+			<img
+				src="https://user-images.githubusercontent.com/62889604/232098113-49aca752-dd8a-4f2c-9774-350cbe704f3c.png"
+				alt="smileicon"
+			/>
+			<p>img src = https://www.flaticon.com/free-icons/smile</p>
 
-      <h3>A picture that represents when I'm sad</h3>
-      <img src="https://user-images.githubusercontent.com/62889604/232098835-972ba648-1b61-4fca-b960-7d9a66f82dea.png" alt="sadicon" />
-      <p>img src = https://www.flaticon.com/free-icons/sad</p>
+			<h3>A picture that represents when I'm sad</h3>
+			<img
+				src="https://user-images.githubusercontent.com/62889604/232098835-972ba648-1b61-4fca-b960-7d9a66f82dea.png"
+				alt="sadicon"
+			/>
+			<p>img src = https://www.flaticon.com/free-icons/sad</p>
 
-      <h3>One of my favorite quotes</h3>
-      <!--
+			<h3>One of my favorite quotes</h3>
+			<!--
         Note: We'll learn about semantic tags more this week, but an article is a good semantic
         choice here to group the information about a single quote and the author/source. If
         you want to have multiple quotes, try duplicating this
         "card UI" structure.
         -->
-      <article>
-        <blockquote>
-          <p>
-            It ain't over till it's over.
-          </p>
-          <footer>Lawrence Peter "Yogi" Berra</footer>
-        </blockquote>
-      </article>
-    </section>
-  </body>
+			<article>
+				<blockquote>
+					<p>It ain't over till it's over.</p>
+					<footer>Lawrence Peter "Yogi" Berra</footer>
+				</blockquote>
+			</article>
+		</section>
+	</body>
 </html>
