--- a/aboutmore.html
+++ b/aboutmore.html
@@ -12,18 +12,20 @@
 -->
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="/styles.css" />
+		<script src="/index.js"></script>
 		<title>What I learned</title>
-		<link rel="stylesheet" href="/styles.css">
 	</head>
 	<body>
-    <section>
-      <h1>What I learned...</h1>
+		<section>
+			<h1>What I learned...</h1>
 
 			<article>
 				<h2>In the Internet Design Laboratory</h2>
 				<img
 					src="https://velog.velcdn.com/images/gga4638/post/6d9df8cb-5086-4fa9-83d1-521fd6a2cb27/image.png"
-					alt="front-end-language">
+					alt="front-end-language"
+				/>
 				<p>src = https://velog.io/@gga4638/HTMLCSS</p>
 			</article>
 
@@ -73,17 +75,20 @@
 				<li>
 					<img
 						src="https://user-images.githubusercontent.com/62889604/232183742-24e57284-67a6-4317-8c50-2658062289b9.png"
-						alt="speedreader">
+						alt="speedreader"
+					/>
 				</li>
 				<li>
 					<img
 						src="https://user-images.githubusercontent.com/62889604/232183748-c8d0484f-8977-4d4c-946d-6d7cd19a945c.png"
-						alt="nonogram">
+						alt="nonogram"
+					/>
 				</li>
 				<li>
 					<img
 						src="https://user-images.githubusercontent.com/62889604/232183747-e3f454b8-6285-421b-9547-ffd6b05eb384.png"
-						alt="encrypt">
+						alt="encrypt"
+					/>
 				</li>
 			</ul>
 		</footer>
