--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <!--
   ***
   Name: SunWoo Jang
-  Date: April 14, 2023
+  Date: June 02, 2023
   Section: IAB 6068
 
   This is the index.html page for my portfolio of web development work.
   It includes links to side projects I have done during IAB 6068,
   including an about page, a blog template.
-  Also, it has TODO List.
+  Also, it has TODO List and Trivia Quiz.
   ***
 -->
 <html lang="en">
@@ -21,7 +21,8 @@
 
 <body>
   <h1>201901714 장선우</h1>
-  <a href="about.html">about me</a>
+  <a href="about.html">about me</a> <br />
+  <a href="/triviaquiz.html">Trivia Quiz</a>
   <br />
 
   <h2>TODO List</h2>
