--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <h1>201901714 장선우</h1>
   <a href="about.html">about me</a> <br />
-  <a href="/triviaquiz.html">Trivia Quiz</a>
+  <a href="triviaquiz.html">Trivia Quiz</a>
   <br />
 
   <h2>TODO List</h2>
