--- a/triviaquiz.html
+++ b/triviaquiz.html
@@ -12,7 +12,7 @@
 <html lang="en">
 	<meta charset="UTF-8" />
 	<head>
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="triviaquiz.css" />
 		<script src="triviaquiz.js"></script>
 		<title>Trivia Quiz</title>
 	</head>
