--- a/triviaquiz.html
+++ b/triviaquiz.html
@@ -10,8 +10,8 @@
   ***
 -->
 <html lang="en">
-	<meta charset="UTF-8" />
 	<head>
+		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="triviaquiz.css" />
 		<script src="triviaquiz.js"></script>
 		<title>Trivia Quiz</title>
@@ -88,24 +88,23 @@
 				</div>
 			</section>
 
-
 			<section id="dic-container">
 				<div id="search-control">
-					<input 
-						id="dictionary-button" 
-						type="radio" 
-						name="dic" 
-						value="dictionary" 
+					<input
+						id="dictionary-button"
+						type="radio"
+						name="dic"
+						value="dictionary"
 						checked
-					>Dictionary
-					<input 
-						id="thesaurus-button" 
-						type="radio" 
-						name="dic" 
+					/>Dictionary
+					<input
+						id="thesaurus-button"
+						type="radio"
+						name="dic"
 						value="thesaurus"
-					>Thesaurus
-					<input id="input-word" type="text">
-					<input id="search-button" type="submit" value="find">
+					/>Thesaurus
+					<input id="input-word" type="text" />
+					<input id="search-button" type="submit" value="find" />
 				</div>
 
 				<div id="search-result">
